# mimi_manipulation_pkg

./: CMakeLists.txt  README.md  grasper_readme.md  manipulation_master_readme.md  object_grasper_readme.md  package.xml  recognizer_readme.md
action/: ObjectGrasper.action  ObjectRecognizer.action
config/: location_dict.yaml  location_dict.yaml~  mimi_specification.yaml  object_dict.yaml
docs/: config_param_readme.md  grasper_readme.md  manipulation_master_readme.md  param_readme.md  recognizer_readme.md
include/manipulation_pkg/: centroid_detector.h
include/mimi_manipulation_pkg/: centroid_detector.h
launch/: #manipulation.launch#  manipulation.launch  motor_setup.launch  test.launch
msg/: ImageRange.msg
param/: mimi_motor.yaml  object_dict.yaml
src/: manipulation_master.py  motor_controller.py  new_object_recognizer.py  object_centroid_detector.cpp  object_grasper.py  object_recognizer.py  three_dimensional_position_estimator.cpp
srv/: DetectDepth.srv  ManipulateSrv.srv  RecognizeCount.srv  RecognizeCount.srv~  RecognizeLocalize.srv  RecognizeLocalize.srv~
test/: test_grasper.py  test_master.py  test_recognizer.py
